[build-system]
requires = ["setuptools","tox","distutils","distutils.core","pytest","functools","unittest","logging","warnings","configparser"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = "pp* cp36* cp37* *musllinux*"
test-skip = "cp310-win32 cp310-manylinux_i686 cp311-win32 cp311-manylinux_i686"
#test-command = "python {project}/tools/verify_wheels.py"
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
#before-test = "pip install --only-binary=numpy,scipy numpy scipy"

[tool.poetry]
name="constants",
version="2023.2.0",
description="The simple way to deal with environment constants.",
long_description=open("README.rst").read(),
author="Eugene Van den Bulke",
author_email="eugene.vandenbulke@gmail.com",
url="http://github.com/3kwa/constants",
py_modules=["constants"],
license="BSD",
install_requires=[
    "tox",
    "distutils",
    "distutils.core",
    "pytest",
    "functools",
    "unittest",
    "logging",
    "warnings",
    "configparser",
],
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
