[build-system]
requires = ["setuptools","distutils","distutils.core","functools","configparser"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = "pp* cp36* cp37* *musllinux*"
test-skip = "cp310-win32 cp310-manylinux_i686 cp311-win32 cp311-manylinux_i686"
#test-command = "python {project}/tools/verify_wheels.py"
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
#before-test = "pip install --only-binary=numpy,scipy numpy scipy"

[tool.poetry]
name="constants",
version="2023.2.0",
description="The simple way to deal with environment constants.",
long_description=open("README.rst").read(),
author="Eugene Van den Bulke",
author_email="eugene.vandenbulke@gmail.com",
url="http://github.com/3kwa/constants",
py_modules=["constants"],
license="BSD"
